<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_username"
        android:id="@+id/id_username"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_password"
        android:id="@+id/id_password"
        android:layout_below="@+id/id_username"
        android:layout_alignParentStart="true"
        android:layout_marginTop="57dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_name"
        android:hint="Enter your name in Capital Letters only"
        android:layout_alignTop="@+id/id_username"
        android:layout_alignBaseline="@+id/id_username"
        android:layout_toEndOf="@+id/id_username"
        android:text="@string/text_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_pass"
        android:inputType="textPassword"
        android:layout_alignTop="@+id/id_password"
        android:layout_alignBaseline="@+id/id_password"
        android:layout_toEndOf="@+id/id_password"
        android:text="@string/text_pass" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_signIn"
        android:id="@+id/id_signIn"
        android:layout_below="@+id/id_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="102dp"
        android:onClick="button_signIn" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_signUp"
        android:id="@+id/id_signUp"
        android:layout_below="@+id/id_signIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:onClick="button_signUp" />
</RelativeLayout>
