<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.user.buspasssystem.YourInformation">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_receivedName"
        android:id="@+id/id_receivedName"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="61dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_receivedCustomerNumber"
        android:id="@+id/id_CustomerNumber"
        android:layout_below="@+id/id_receivedName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="94dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/text_custNumberAgain"
        android:id="@+id/id_custNumber"
        android:layout_alignTop="@+id/id_CustomerNumber"
        android:layout_alignBaseline="@+id/id_CustomerNumber"
        android:layout_toEndOf="@+id/id_CustomerNumber" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/text_namereceivedfromDB"
        android:id="@+id/id_namereceivedfromDB"
        android:layout_alignTop="@+id/id_receivedName"
        android:layout_alignBaseline="@+id/id_receivedName"
        android:layout_alignStart="@+id/id_custNumber" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_checkSchedule"
        android:id="@+id/id_checkSchedule"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/id_custNumber"
        android:layout_marginBottom="141dp"
        android:onClick="button_Schedule" />

</RelativeLayout>
