<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.user.buspasssystem.NewRegistration"
    android:id="@+id/dd">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/id_Image"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="86dp"
        android:layout_alignParentRight="true"
        android:contentDescription="100" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_newRegName"
        android:id="@+id/id_newRegName"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="76dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_takePicture"
        android:id="@+id/btnCapturePicture"
        android:layout_alignBottom="@+id/id_Image"
        android:layout_alignParentStart="true"
        android:onClick="button_Camera" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_enterName"
        android:hint="Enter your name in Capital Letters only"
        android:layout_alignBottom="@+id/id_newRegName"
        android:layout_alignBaseline="@+id/id_newRegName"
        android:layout_toEndOf="@+id/id_newRegName"
        android:text="@string/text_enterName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_newRegPassword"
        android:id="@+id/id_newRegPassword"
        android:layout_below="@+id/id_enterName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="57dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_enterPassword"
        android:inputType="textPassword"
        android:layout_alignTop="@+id/id_newRegPassword"
        android:layout_alignBaseline="@+id/id_newRegPassword"
        android:layout_toEndOf="@+id/id_newRegPassword"
        android:text="@string/text_enterPassword" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Save"
        android:id="@+id/id_Save"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/id_Image"
        android:onClick="button_Save" />

</RelativeLayout>
